Bug 447029 - Konsole no longer (or) incorrectly use GTK theme
Summary: Konsole no longer (or) incorrectly use GTK theme
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: 21.12.0
Platform: Manjaro Linux
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-12-15 15:34 UTC by Tun
Modified: 2023-03-11 11:11 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.105
Sentry Crash Report:


Attachments
konsole 21.12 with bug (128.08 KB, image/png)
2021-12-15 15:34 UTC, Tun
Details
konsole 21.08 working (176.34 KB, image/png)
2021-12-15 15:35 UTC, Tun
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Tun 2021-12-15 15:34:43 UTC
Created attachment 144573 [details]
konsole 21.12 with bug

SUMMARY
***
NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***


STEPS TO REPRODUCE
1. Install Konsole 21.12.0
2. Open Konsole
3. Open New Tab
4. Click 'Help' and 'About Konsole'

OBSERVED RESULT
- dialog and tab has pale background and texts are not legible in 21.12

EXPECTED RESULT
- dialog and tab text should be legible (as shown in 21.08)

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: 5.10.85
(available in About System)
KDE Plasma Version: N/A
KDE Frameworks Version: 5.89.0
Qt Version: 5.15.2 (built against 5.15.2)

ADDITIONAL INFORMATION
- I am using konsole with i3wm on XFCE
Comment 1 Tun 2021-12-15 15:35:30 UTC
Created attachment 144574 [details]
konsole 21.08 working
Comment 2 Nicolas Fella 2021-12-22 22:35:09 UTC
This is most likely caused by https://invent.kde.org/utilities/konsole/-/merge_requests/493

The same thing can be seen for Kate which also uses KColorSchemeManager.

I'm still looking into the details
Comment 3 Bug Janitor Service 2021-12-23 11:49:39 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kconfigwidgets/-/merge_requests/94
Comment 4 Bug Janitor Service 2023-03-09 10:30:10 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kconfigwidgets/-/merge_requests/187
Comment 5 Jan Grulich 2023-03-09 18:40:06 UTC
Git commit 2cd530626aeafd861c65b434af85d5153da618a2 by Jan Grulich.
Committed on 09/03/2023 at 12:12.
Pushed by nicolasfella into branch 'master'.

KColorSchemeManager: don't override color scheme set by platform theme

This allows to have Qt platform theme setting the color scheme before
it gets set and overriden by KColorSchemeManager. This is useful for 3rd
party platform themes like QGnomePlatform, allowing them to set a color
scheme that would complement QPalette. Since many KDE apps rely on using
KColorScheme, it can happen that they will use a color from KColorScheme
that doesn't correspond to QPalette set through the platform theme and
end up being broken.

M  +11   -2    src/kcolorschememanager.cpp

https://invent.kde.org/frameworks/kconfigwidgets/commit/2cd530626aeafd861c65b434af85d5153da618a2
Comment 6 Nicolas Fella 2023-03-09 18:40:42 UTC
Git commit b093cd1347b0de8c1e3ff1d98c68b6139a7d0cbc by Nicolas Fella, on behalf of Jan Grulich.
Committed on 09/03/2023 at 18:40.
Pushed by nicolasfella into branch 'kf5'.

KColorSchemeManager: don't override color scheme set by platform theme

This allows to have Qt platform theme setting the color scheme before
it gets set and overriden by KColorSchemeManager. This is useful for 3rd
party platform themes like QGnomePlatform, allowing them to set a color
scheme that would complement QPalette. Since many KDE apps rely on using
KColorScheme, it can happen that they will use a color from KColorScheme
that doesn't correspond to QPalette set through the platform theme and
end up being broken.
(cherry picked from commit 2cd530626aeafd861c65b434af85d5153da618a2)

M  +11   -2    src/kcolorschememanager.cpp

https://invent.kde.org/frameworks/kconfigwidgets/commit/b093cd1347b0de8c1e3ff1d98c68b6139a7d0cbc
Comment 7 Nicolas Fella 2023-03-11 11:11:08 UTC
This needs https://github.com/FedoraQt/QGnomePlatform/pull/132 to have an actual effect