[kcolorschememanager] Properly restore default palette

Currently when activating the default colorscheme we create a palette from the default KColorScheme

However that is different from the application's default palette

The former is effectively Breeze colors while the latter is fetched from the platformtheme

By setting a default-constructed QPalette we tell Qt to load the default palette

BUG: 447029