src/kcolorschememanager.cpp
@@ -32,7 +32,7 @@ void KColorSchemeManagerPrivate::activateSchemeInternal(const QString &colorSche
     // ApplicationPaletteChange event.
     qApp->setProperty("KDE_COLOR_SCHEME_PATH", colorSchemePath);
     if (colorSchemePath.isEmpty()) {
-        qApp->setPalette(KColorScheme::createApplicationPalette(KSharedConfig::Ptr(nullptr)));
+        qApp->setPalette(QPalette());
     } else {
         qApp->setPalette(KColorScheme::createApplicationPalette(KSharedConfig::openConfig(colorSchemePath)));
     }
